--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum rem illum soluta excepturi sapiente voluptatem! Minima omnis, quas libero a necessitatibus voluptatum voluptatibus fugiat modi, non at dolorem, porro ullam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nobis laboriosam labore sed hic aperiam quasi soluta totam exercitationem reprehenderit aut harum esse, delectus nesciunt ipsa voluptas nostrum explicabo pariatur!</p>
         </article>
 
     </main>
